--- a/mini-media-frontend/src/index.css
+++ b/mini-media-frontend/src/index.css
@@ -15,9 +15,46 @@ body {
   overflow-x: hidden;
 }
 
-/* .blog-editor-interface {
-  display: flex;
-  flex: 0 1 100%;
-  flex-direction: column;
-  height: 100vh;
-} */
+.loader {
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #25b09b;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+.chat_loader {
+  width: 9px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  animation: l5 1s infinite linear alternate;
+}
+@keyframes l5 {
+  0% {
+    box-shadow: 14px 0 #000, -14px 0 #0002;
+    background: #000;
+  }
+  33% {
+    box-shadow: 14px 0 #000, -14px 0 #0002;
+    background: #0002;
+  }
+  66% {
+    box-shadow: 14px 0 #0002, -14px 0 #000;
+    background: #0002;
+  }
+  100% {
+    box-shadow: 14px 0 #0002, -14px 0 #000;
+    background: #000;
+  }
+}
